# FMTStar

./: .gitignore  README.md  highdof-planner.py  project.py  stats.txt
data/presentation/: naive.txt  smart.txt  stats.txt  test.txt
data/report/equalReplans/: naive10.txt  naive20.txt  naive30.txt  smart.txt
data/report/unequalReplans/: naiveOtherFile1.txt  naiveOtherFile2.txt  naiveStats1.txt  naiveStats2.txt  smartOtherFile.txt  smartStats.txt
envs/: basic-withTables.env.xml  basic.env.xml  chamber.env.xml  cups.env.xml  four-chambers.env.xml  large-chamber.env.xml
fmt/: CMakeLists.txt  testplugin.py
fmt/include/: fmt.h  helper.h  node.h  tree.h  trigger.h
fmt/src/: fmt.cpp  helper.cpp  node.cpp  tree.cpp  trigger.cpp
scripts/: analyze.py
